# another_synth

./: .eslintcache  .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  FIX_INSTRUCTIONS.md  INTEGRATION_COMPLETE.md  NOTES-LIVE-EDITING.md  PLAN-live-patch-editing.md  PLAN-playback-service.md  POOLING_BUG_ANALYSIS.md  README.md  TRACKER_OPTIMIZATION_PLAN.md  TRACKER_WORKLET_SCHEDULING.md  TYPESCRIPT_FIXES.md  WORKLET_POOLING.md  WORKLET_POOLING_SUMMARY.md  build-wasm.cjs  build-worklets.cjs  package-lock.json  package.json  quasar.config.ts  tracker_tests.md  tsconfig.json  tsconfig.worklet.json  vite.config.worklet.ts  vitest.config.ts  vitest.setup.ts
.claude/: settings.local.json
misc/: peacedroid.mod  song.json
public/: default-patch.json  system-bank.json
public/wasm/: audio_processor.js  audio_processor_bg.wasm  debug.js  debug.wasm  debug.wasm.map  debug.wat  release.d.ts  release.js  release.wasm  release.wasm.map  release.wat  wasm_audio_worklet.d.ts  wasm_audio_worklet_bg.wasm
public/worklets/: effects-worklet.js  recording-worklet.js  synth-worklet.js
rust-wasm/: CHORUS_FIX.md  Cargo.toml  build_native.sh  test_chorus.sh  test_chorus_debug.rs
rust-wasm/benches/: graph_benchmark.rs
rust-wasm/src/: automation.rs  effect_stack.rs  graph.rs  impulse_generator.rs  lib.rs  readme.md  voice.rs
rust-wasm/src/audio/: buffer.rs  mod.rs
rust-wasm/src/audio_engine/: mod.rs  native.rs  patch.rs  patch_loader.rs  patch_serialization_spec.rs  wasm.rs
rust-wasm/src/biquad/: biquad.rs  mod.rs
rust-wasm/src/graph/: buffer_pool.rs  graph.rs  mod.rs  modulation_processor.rs  tests.rs  types.rs
rust-wasm/src/macros/: manager.rs  mod.rs  types.rs
rust-wasm/src/nodes/: analog_oscillator.rs  arpeggiator.rs  biquad_filter.rs  bitcrusher.rs  chorus.rs  compressor.rs  convolver.rs  delay.rs  envelope.rs  eq.rs  filter_collection.rs  freeverb.rs  gate_mixer.rs  glide.rs  global_frequency_node.rs  global_velocity_node.rs  ladder_filter.rs  lfo.rs  limiter.rs  lpfilter.rs  mixer.rs  mod.rs  morph_wavetable.rs  noise_generator.rs  oscillator.rs  sampler.rs  saturation.rs  shared_wavetables.rs  wavetable.rs  wavetable_oscillator.rs
rust-wasm/src/processing/: mod.rs
rust-wasm/src/traits/: mod.rs
rust-wasm/src/utils/: buffer_ops.rs  curves.rs  mod.rs
rust-wasm/tests/: real_patch.json
scripts/: generate-port-ids.js
src/assembly/: buffer-offsets.ts  constants.ts  envelope.ts  oscillator.ts  synth.ts
src/audio/: AudioSystem.ts  audio-processor-loader.ts  instrument-v2-pooled.ts.unused  instrument-v2.ts  instrument.ts  mod-instrument.ts  modulation-route-manager.ts  pooled-instrument-factory.ts  processor.js  processor.ts  shared-audio-system.ts  sync-manager.ts  synth-worklet.ts  voice.ts  worklet-config.ts  worklet-pool.ts
src/boot/: pinia-audio-system.ts
src/components/: AmountSlider.vue  ArpeggiatorComponent.vue  AudioCardHeader.vue  AudioKnobComponent.vue  BitcrusherComponent.vue  CategoryTreeNode.vue  ChorusComponent.vue  CompressorComponent.vue  ConvolverComponent.vue  CpuUsageHeader.vue  DelayComponent.vue  EnvelopeComponent.vue  FilterComponent.vue  FilterComponent_old.vue  FrequencyAnalyzerComponent.vue  GenericTabContainer.vue  GlideComponent.vue  LfoComponent.vue  MacroControls.vue  NoiseComponent.vue  OscillatorComponent.vue  OscilloscopeComponent.vue  PatchPicker.vue  PianoKeyboardComponent.vue  PresetManager.vue  ResonatorBankFilterComponent.vue  ReverbComponent.vue  RoutingComponent.vue  SamplerComponent.vue  SaturationComponent.vue  VelocityComponent.vue  WavetableEditor.vue  WavetableOscillatorComponent.vue
src/composables/: useAnimationLoop.ts  useTrackerEditing.ts  useTrackerExport.ts  useTrackerFileIO.ts  useTrackerInstruments.ts  useTrackerNavigation.ts  useTrackerPlayback.ts  useTrackerSelection.ts  useTrackerSongBuilder.ts
src/constants/: tracker-constants.ts
src/css/: app.scss
src/layouts/: MainLayout.vue
src/pages/: HelpPage.vue  IndexPage.vue  SettingsPage.vue  TrackerPage.vue
src/router/: routes.ts
src/stores/: asset-store.ts  audio-system-store.ts  connection-store.ts  instrument-store.ts  keyboard-store.ts  layout-store.ts  legacy-store-bridge.ts  macro-store.ts  node-state-store.ts  patch-store.ts  theme-store.ts  tracker-audio-store.ts  tracker-playback-store.ts  tracker-store.ts  user-settings-store.ts
src/tests/: mod-import.test.ts  mod-parser.test.ts  tracker-song-bank.test.ts  (+2 more)
tests/: README.md  macro-routing.test.ts  patch-serializer.test.ts  setup.ts  song-bank-normalization.test.ts  tracker-state.test.ts  voice-count.test.ts
types/: plugin-vue-shim.d.ts
wasmsynth/: Cargo.toml  build.cjs
wasmsynth/pkg/: wasm_audio_worklet.js  wasm_audio_worklet_bg.wasm.d.ts
wasmsynth/src/: lib.rs  oscillator.rs  wasm_audio.rs  worklet.js
(+81 files in other folders)
