[package]
name = "audio_processor"
description = "Audio processing system for WebAssembly"
repository = "https://github.com/avataren/"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
simd = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["console"] }
serde = { version =  "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde-wasm-bindgen = "0.6.5"
once_cell = "1.20.3"
rustfft = "6.2.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[package.metadata]
rust-version = "nightly"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O1', '--enable-simd']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O2', '--enable-simd']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

[[bench]]
name = "graph_benchmark"
harness = true
