[package]
name = "audio_processor"
description = "Audio processing system for WebAssembly"
repository = "https://github.com/avataren/"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
simd = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Window", "Crypto", "console", "Performance"] }
serde = { version =  "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
once_cell = "1.21.3"
rustfft = { version = "6.4.1", features = ["wasm_simd"] }
hound = "3.5.1"
rand = "0.9"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rustc-hash = "2.1.1"

fft-convolver = "0.2.0"
rubato = "0.16.2"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[package.metadata]
rust-version = "nightly"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O1', '--enable-simd']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O2', '--enable-simd']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

[[bench]]
name = "graph_benchmark"
harness = true
