[package]
name = "audio_processor"
description = "Audio processing system for WebAssembly"
repository = "https://github.com/avataren/"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasm"]
simd = []
# Enables the WebAssembly build with JavaScript bindings for the web app.
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "getrandom/wasm_js",
]
# Enables the native audio host required for the demo binary while retaining the wasm bindings it depends on.
native-host = ["dep:cpal"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.104", optional = true }
js-sys = { version = "0.3.81", optional = true }
web-sys = { version = "0.3.81", features = ["Window", "Crypto", "console", "Performance"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde = { version =  "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
rustfft = { version = "6.4.1", features = ["wasm_simd"] }
hound = "3.5.1"
rand = "0.9"
getrandom = "0.3.3"
rustc-hash = "2.1.1"
cpal = { version = "0.16.0", optional = true }
anyhow = "1.0.93"
dasp_sample = "0.11.0"

fft-convolver = "0.2.0"
rubato = "0.16.2"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[package.metadata]
rust-version = "nightly"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O1', '--enable-simd']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O2', '--enable-simd']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

[[bench]]
name = "graph_benchmark"
harness = true

[[bin]]
name = "native_demo"
path = "src/bin/native_demo.rs"
required-features = ["native-host"]
